# graphql-example

./: README.md  pyproject.toml
example/example_1/: schema.py
example/example_1_test_query/: client.py  server.py
example/example_2_test_crud/: client.py  database.py  schemas.py  test.db
example/graphene/example_1_test_query/: README.md  client.py  schemas.py  server.py
example/graphene/example_2_test_crud/: database.py
example/schema/: schema.py
example/schemas/: graphql-sqlalchemy.py
example/server/: ex1.py
example/templates/: garphql_page.py
