[project]
name = "graphql-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ariadne>=0.23.0",
    "eralchemy[graphviz]>=1.5.0",
    "fastapi>=0.115.4",
    "graphene>=3.4.1",
    "locust>=2.32.2",
    "psycopg2>=2.9.10",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.0",
]
